<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="2"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/clear"
        android:textSize="@dimen/display_text_size"/>
    <Button
        android:id="@+id/clear"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/display"
        android:text="@string/clear"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/eight"
        app:layout_constraintBottom_toTopOf="@id/four"
        android:text="@string/seven"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintLeft_toRightOf="@id/seven"
        app:layout_constraintRight_toLeftOf="@id/nine"
        app:layout_constraintBottom_toTopOf="@id/five"
        android:text="@string/eight"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/nine"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintLeft_toRightOf="@id/eight"
        app:layout_constraintRight_toLeftOf="@id/multiplication"
        app:layout_constraintBottom_toTopOf="@id/six"
        android:text="@string/nine"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/multiplication"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/clear"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/nine"
        app:layout_constraintBottom_toTopOf="@id/plus"
        android:text="@string/mul"
        android:textSize="@dimen/button_text_size" />
    <Button
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/seven"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/five"
        app:layout_constraintBottom_toTopOf="@id/one"
        android:text="@string/four"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/five"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/eight"
        app:layout_constraintBottom_toTopOf="@id/two"
        app:layout_constraintRight_toLeftOf="@id/six"
        app:layout_constraintLeft_toRightOf="@id/four"
        android:text="@string/five"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/six"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/nine"
        app:layout_constraintLeft_toRightOf="@id/five"
        app:layout_constraintRight_toLeftOf="@id/plus"
        app:layout_constraintBottom_toTopOf="@id/three"
        android:text="@string/six"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/plus"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/multiplication"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/six"
        app:layout_constraintBottom_toTopOf="@id/subtract"
        android:text="@string/sum"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@id/four"
        app:layout_constraintBottom_toTopOf="@id/zero"
        android:text="@string/one"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/five"
        app:layout_constraintBottom_toTopOf="@id/zero"
        app:layout_constraintRight_toLeftOf="@id/three"
        app:layout_constraintLeft_toRightOf="@id/one"
        android:text="@string/two"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/six"
        app:layout_constraintLeft_toRightOf="@id/two"
        app:layout_constraintRight_toLeftOf="@id/subtract"
        app:layout_constraintBottom_toTopOf="@id/equal"
        android:text="@string/three"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/subtract"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/plus"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/three"
        app:layout_constraintBottom_toTopOf="@id/division"
        android:text="@string/sub"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/zero"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="2"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/equal"
        android:text="@string/zero"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/equal"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/three"
        app:layout_constraintLeft_toRightOf="@id/zero"
        app:layout_constraintRight_toLeftOf="@id/division"
        android:text="@string/equal"
        android:textSize="@dimen/button_text_size"/>
    <Button
        android:id="@+id/division"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/equal"
        app:layout_constraintTop_toBottomOf="@id/subtract"
        android:text="@string/div"
        android:textSize="@dimen/button_text_size"/>

</android.support.constraint.ConstraintLayout>